--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,19 @@
 
 body { -webkit-app-region: drag; }
 
+#cover {
+  position: fixed;
+  display: none;
+  background-color: black;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: 0.5;
+}
+
 .button {
+  position: relative;
+  z-index: 0;
   -webkit-app-region: no-drag;
   background-color: deepskyblue;
   color: white;
@@ -16,7 +28,7 @@ body { -webkit-app-region: drag; }
   line-height: 80px;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
-  transition: background-color 0.2s, opacity 0.2s ease-out;  
+  transition: background-color 0.2s ease-out, height 0.2s;  
 }
 
 #buttonUndo, #buttonRedo { font-size: 36px; }
@@ -30,11 +42,17 @@ body { -webkit-app-region: drag; }
 #buttonExit { background-color: indianred; }
 
 #buttonCheck {
+  height: 0;
   width: 100%;
   clear: both;
 }
 
-.buttonClicked { opacity: 0.5; }
+#buttonCheck i {
+  transition: opacity 0.2s;
+  opacity: 0;
+}
+
+.buttonClicked { background-color: lightskyblue; }
 
 .buttonPressed { background-color: dodgerblue; }
 
