--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ body { -webkit-app-region: drag; }
   display: none;
   background-color: black;
   width: 100%;
-  height: 100%;
+  height: 240px;
   z-index: 1;
   opacity: 0.5;
 }
